--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,6 @@ mbed-greentea>=0.2.24,<1.7
 beautifulsoup4>=4,<=4.6.3
 fuzzywuzzy>=0.11,<=0.17
 pyelftools>=0.24,<=0.25
-git+https://github.com/armmbed/manifest-tool.git@v1.4.6
+manifest-tool==1.5.2
 icetea>=1.2.1,<1.3
+MarkupSafe<2.1
